Bug 112209 - Opening PPTX with images behind masks shows these images incorrectly
Summary: Opening PPTX with images behind masks shows these images incorrectly
Status: VERIFIED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Impress (show other bugs)
Version:
(earliest affected)
Inherited From OOo
Hardware: All All
: medium normal
Assignee: Tünde Tóth
URL:
Whiteboard: target:7.4.0 target:7.3.1
Keywords: filter:pptx
Depends on:
Blocks: PPTX-Images
  Show dependency treegraph
 
Reported: 2017-09-04 12:07 UTC by Gilles Gravier
Modified: 2022-02-03 20:35 UTC (History)
6 users (show)

See Also:
Crash report or crash signature:
Regression By:


Attachments
This is the test case file. It's in PowerPoint. Opening it yields incorrect display. (1.06 MB, application/zip)
2017-09-04 12:09 UTC, Gilles Gravier
Details
Sample on how the file should be displayed (116.21 KB, application/pdf)
2017-09-04 12:10 UTC, Gilles Gravier
Details
Sample on how the file is incorrectly displayed in LO541 (133.24 KB, application/pdf)
2017-09-04 12:11 UTC, Gilles Gravier
Details
Screenshot of the original document side by side in PP and Impress (541.09 KB, image/png)
2021-01-28 11:13 UTC, NISZ LibreOffice Team
Details
Screenshot of the original document side by side in PP and Impress (515.62 KB, image/png)
2021-03-11 08:35 UTC, NISZ LibreOffice Team
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Gilles Gravier 2017-09-04 12:07:26 UTC
Description:
I have a specific file which was created in PPTX. When I open it in PPTX the image inside it is properly proportioned and displayed black and white. When I open it in LO5.4.1.2 (on Windows and on Ubuntu) the image is displayed stretched vertically, and in color. Seems that the graphics formatting for the object is ignored.

Steps to Reproduce:
I will upload files after
1.Open the pptx file on PPTX... looks fine.
2.I am providing 2 PDF files which shows how PPTX and LO541 render the document in PDF... It is similar to displayed content.
3.

Actual Results:  
The file is incorrectly displayed on LO (image in color, incorrect proportions).

Expected Results:
Image should be black and white and with correct proportions.


Reproducible: Always

User Profile Reset: No. But it happens on Windows and on Linux with 2 different profiles.

Additional Info:
Uploading 3 sample files once bug is filed.


User-Agent: Mozilla/5.0 (Windows NT 6.1; Win64; x64) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/60.0.3112.113 Safari/537.36
Comment 1 Xisco Faulí 2017-09-04 12:08:48 UTC
Thank you for reporting the bug. Please attach a sample document, as this makes it easier for us to verify the bug. 
I have set the bug's status to 'NEEDINFO'. Please change it back to 'UNCONFIRMED' once the requested document is provided.
(Please note that the attachment will be public, remove any sensitive information before attaching it. 
See https://wiki.documentfoundation.org/QA/FAQ#How_can_I_eliminate_confidential_data_from_a_sample_document.3F for help on how to do so.)
Comment 2 Gilles Gravier 2017-09-04 12:09:17 UTC
Created attachment 136005 [details]
This is the test case file. It's in PowerPoint. Opening it yields incorrect display.

The attached PPTX file opens incorrectly in LibreOffice. The image in the slide is displayed in color and streched vertically. It should be displayed properly proportioned and in black and white.
Comment 3 Gilles Gravier 2017-09-04 12:10:10 UTC
Created attachment 136006 [details]
Sample on how the file should be displayed

This is a PDF generated from PowerPoint. It shows how the file should be correctly displayed.
Comment 4 Gilles Gravier 2017-09-04 12:11:37 UTC
Created attachment 136007 [details]
Sample on how the file is incorrectly displayed in LO541

This PDF shows how LO541 opens, processes, and also converts incorrectly to PDF the PPTx reference file above.
Comment 5 Xisco Faulí 2017-09-04 12:18:52 UTC
Confirmed in

- Version: 6.0.0.0.alpha0+
Build ID: 04d70c0999c716f5465631eca50945915ec607c4
CPU threads: 4; OS: Linux 4.10; UI render: default; VCL: gtk3; 
Locale: ca-ES (ca_ES.UTF-8); Calc: group

- Version: 5.2.0.0.alpha1+
Build ID: 5b168b3fa568e48e795234dc5fa454bf24c9805e
CPU Threads: 4; OS Version: Linux 4.8; UI Render: default; 
Locale: ca-ES (ca_ES.UTF-8)


- Version: 4.3.0.0.alpha1+
Build ID: c15927f20d4727c3b8de68497b6949e72f9e6e9e

- Version 4.1.0.0.alpha0+ (Build ID: efca6f15609322f62a35619619a6d5fe5c9bd5a)

- LibreOffice 3.3.0 
OOO330m19 (Build:6)
tag libreoffice-3.3.0.4

@Tamás, I thought you might be interested in this one...
Comment 6 QA Administrators 2018-10-22 02:47:56 UTC Comment hidden (obsolete)
Comment 7 Buovjaga 2019-09-29 16:18:58 UTC
Still confirmed

Version: 6.4.0.0.alpha0+ (x64)
Build ID: d744838991594eebe27acc4c7d9fb4579d654853
CPU threads: 4; OS: Windows 10.0; UI render: default; VCL: win; 
TinderBox: Win-x86_64@42, Branch:master, Time: 2019-09-29_05:12:00
Locale: fi-FI (fi_FI); UI-Language: en-US
Calc: threaded
Comment 8 NISZ LibreOffice Team 2021-01-28 11:13:12 UTC
Created attachment 169226 [details]
Screenshot of the original document side by side in PP and Impress

Still a problem in:

Version: 7.2.0.0.alpha0+ (x64) / LibreOffice Community
Build ID: 7eb289c49cc7245ef3001a39be0c15d06bbe875b
CPU threads: 4; OS: Windows 6.3 Build 9600; UI render: Skia/Raster; VCL: win
Locale: en-US (hu_HU); UI: en-US
Calc: CL

Two problems actually:
- the shape filling image is stretched instead of being tiled
- the image has a black and white effect applied in PP that is not imported at all
Comment 9 NISZ LibreOffice Team 2021-03-11 08:35:16 UTC
Created attachment 170404 [details]
Screenshot of the original document side by side in PP and Impress

The bitmap fill looks good now thanks to the work on bug #134210, but the black and white effect is still not imported correctly.

Version: 7.2.0.0.alpha0+ (x64) / LibreOffice Community
Build ID: 72841008bf422dfd8553240b3a78f0474d03523c
CPU threads: 4; OS: Windows 10.0 Build 18363; UI render: Skia/Raster; VCL: win
Locale: en-US (hu_HU); UI: en-GB
Calc: CL
Comment 10 NISZ LibreOffice Team 2021-03-11 08:36:49 UTC
@Gülşah I thought you might be interested in this one...
Comment 11 Commit Notification 2022-02-02 16:28:08 UTC
Tünde Tóth committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/1bce0e3004e3ec9d62a3c43801f8f2e8ef5f7fdb

tdf#112209 PPTX import: fix grayscale effect on image filled shape

It will be available in 7.4.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 12 Commit Notification 2022-02-03 10:51:16 UTC
Tünde Tóth committed a patch related to this issue.
It has been pushed to "libreoffice-7-3":

https://git.libreoffice.org/core/commit/5a0ad13545197a4a66e0bc4933418110f73c1e9e

tdf#112209 PPTX import: fix grayscale effect on image filled shape

It will be available in 7.3.1.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 13 BogdanB 2022-02-03 20:35:13 UTC
Ohh, nice, working well in
Version: 7.4.0.0.alpha0+ / LibreOffice Community
Build ID: d5f015185240a7bddfed7ddf10d6b5426e35fb72
CPU threads: 16; OS: Linux 5.13; UI render: default; VCL: gtk3
Locale: ro-RO (ro_RO.UTF-8); UI: en-US
Calc: threaded