tdf#112209 PPTX import: fix grayscale effect on image filled shape

Some image filled shapes with grayscale effect in PPTX documents
created with PowerPoint were not grayscale in Impress.

Change-Id: I0a89f283f525eb47c21c5d5fa788484d8074a7e4
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/128616
Tested-by: Jenkins
Tested-by: László Németh <nemeth@numbertext.org>
Reviewed-by: László Németh <nemeth@numbertext.org>
(cherry picked from commit 1bce0e3004e3ec9d62a3c43801f8f2e8ef5f7fdb)
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/129342
Reviewed-by: Xisco Fauli <xiscofauli@libreoffice.org>